[gd_scene load_steps=3 format=3 uid="uid://ciw00nnf2gedt"]

[ext_resource type="Script" path="res://GUI/Scripts/ChangeMichiRoom.gd" id="1_e8nl3"]
[ext_resource type="PackedScene" uid="uid://b0ljrh2tqay0g" path="res://GUI/ConfirmRelease.tscn" id="2_4wvxr"]

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8nl3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 284.0
offset_right = 441.0
offset_bottom = 540.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Change to Room: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="roomN" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="prev" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "<"

[node name="next" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = ">"

[node name="place" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Place"

[node name="placeGo" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Place and Go"

[node name="release" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Release"

[node name="cancel" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Cancel"

[node name="Control" parent="." instance=ExtResource("2_4wvxr")]
z_index = 8
layout_mode = 2
offset_left = 56.0
offset_top = 389.0
offset_right = 460.0
offset_bottom = 389.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/place" to="." method="_on_place_pressed"]
[connection signal="pressed" from="VBoxContainer/placeGo" to="." method="_on_place_go_pressed"]
[connection signal="pressed" from="VBoxContainer/release" to="." method="_on_release_pressed"]
[connection signal="pressed" from="VBoxContainer/cancel" to="." method="_on_cancel_pressed"]
